# StashAppTelegramBot

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURSOR.md  CURSOR_FULL.md  Dockerfile  Makefile  README.md  config.example.yml  docker-compose.ghcr.yml  docker-compose.yml  healthcheck.py  pyproject.toml  requirements-dev.txt  requirements.txt  truenas-compose.example.yaml
.github/workflows/: docker-publish.yml
bot/: __init__.py  config.py  constants.py  database.py  health.py  logging_config.py  main.py  performance.py  scheduler.py  stash_client.py  telegram_handler.py  voting.py
bot/database/: __init__.py  base.py  preferences.py  sent_photos.py  statistics.py  votes.py  weights.py
bot/handlers/: __init__.py  caption_formatter.py  command_handler.py  image_selector.py  photo_sender.py  vote_handler.py
bot/stash/: __init__.py  client.py  file_id_service.py  gallery_service.py  image_service.py  metrics.py  models.py  rating_service.py  selection.py
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DEPLOYMENT.md  GITHUB_REGISTRY.md  GRAFANA_LOKI.md  IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_TESTING.md  QUICKSTART.md  REVIEW_SUMMARY.md  VOTING_SYSTEM.md
docs/gallery_weight_system/: 1. Система весов галерей (k=0.2).md  10. Команда excluded - список исключенных галерей.md  11. Команда restore - восстановление галереи.md  12. Команда threshold - галереи по проценту минусов.md  13. Кэширование весов галерей.md  (+13 more)
tests/: conftest.py  test_config.py  test_voting.py
(+10 files in other folders)
